backend/reconcile/src/diffs/snapshots/reconcile__diffs__myers__tests__delete_only.snap
---
source: reconcile/src/diffs/myers.rs
expression: result
snapshot_kind: text
---
[
    Delete(
        [
            Token {
                normalised: "a",
                original: "a",
                is_left_joinable: true,
                is_right_joinable: true,
            },
            Token {
                normalised: "b",
                original: "b",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
]
