backend/reconcile/src/diffs/snapshots/reconcile__diffs__myers__tests__identical_content.snap
---
source: reconcile/src/diffs/myers.rs
expression: result
snapshot_kind: text
---
[
    Equal(
        [
            Token {
                normalised: "a",
                original: "a",
            },
            Token {
                normalised: "b",
                original: "b",
            },
            Token {
                normalised: "c",
                original: "c",
            },
        ],
    ),
]
